[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Ernest Dong", email = "dongcy2000@gmail.com"},
]
dependencies = [
    "selenium>=4.4.3",
    "pandas>=1.4.4",
    "openpyxl>=3.0.10",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.15.3",
]
